# ai-risk-analysis

./: .gitignore  README.md
agentic-coworker/agent_ops/: .dockerignore  Dockerfile  QUICK_REFERENCE.md  README.md  backup_data.sh  build_docker.sh  docker-compose.yml  push_docker.sh  pyproject.toml  update_data.sh
agentic-coworker/agent_ops/src/agent_ops/: __init__.py  __main__.py
agentic-coworker/agent_ops/src/agent_ops/backup/: domain_backup.py  iam_backup.py  main.py  tenant_backup.py  tools_backup.py
agentic-coworker/agent_ops/src/agent_ops/init/: 00_create_tenant_tables.sh  01_create_domain_tables.sh  02_create_iam_tables.sh  03_create_tool_tables.sh  04_create_mcp_session.sh  create_domain_tables.py  create_iam_tables.py  create_mcp_session.py  create_tenant_tables.py  create_tool_tables.py  main.py
agentic-coworker/agent_ops/src/agent_ops/restore/: domain_import.py  iam_import.py  main.py  tenant_import.py  tools_import.py
agentic-coworker/agent_ops/src/agent_ops/seed/: domain_init.py  iam_init.py  main.py  tenant_init.py  tools_init.py
agentic-coworker/agent_ops/src/agent_ops/update/: app_key.py  auth_provider.py  main.py
agentic-coworker/agents/: pyproject.toml  requirements.txt  setup.cfg
agentic-coworker/agents/cyber-risk/explanation-agent/prompts/: system_prompt.txt
agentic-coworker/agents/cyber-risk/explanation-agent/schemas/: explanation_output.schema.json
agentic-coworker/agents/cyber-risk/explanation-agent/scripts/: run_explanation.py
agentic-coworker/agents/cyber-risk/explanation-agent/service/: explanation_service.py
agentic-coworker/agents/cyber-risk/explanation-agent/tests/: test_explanation_service.py
agentic-coworker/agents/cyber-risk/narrative-agent/prompts/: system_prompt.txt
agentic-coworker/agents/cyber-risk/narrative-agent/scripts/: run_narrative.py
agentic-coworker/agents/cyber-risk/narrative-agent/service/: narrative_service.py
agentic-coworker/agents/cyber-risk/narrative-agent/tests/: test_narrative_service.py
agentic-coworker/agents/cyber-risk/risk-advisor-agent/prompts/: system_prompt.txt
agentic-coworker/agents/cyber-risk/risk-advisor-agent/scripts/: run_advisor.py
agentic-coworker/agents/cyber-risk/risk-advisor-agent/service/: advisor_service.py
agentic-coworker/agents/cyber-risk/risk-advisor-agent/tests/: test_advisor_service.py
agentic-coworker/agents/cyber-risk/scenario-selection-agent/prompts/: system_prompt.txt
agentic-coworker/agents/cyber-risk/scenario-selection-agent/schemas/: scenario_selection_output.schema.json
agentic-coworker/agents/cyber-risk/scenario-selection-agent/scripts/: run_selection.py
agentic-coworker/agents/cyber-risk/scenario-selection-agent/service/: selection_service.py
agentic-coworker/agents/cyber-risk/scenario-selection-agent/tests/: test_selection_service.py
agentic-coworker/agents/cyber-risk/threat-actor-agent/prompts/: system_prompt.txt
agentic-coworker/agents/cyber-risk/threat-actor-agent/schemas/: threat_actor_output.schema.json
agentic-coworker/agents/cyber-risk/threat-actor-agent/scripts/: run_inference.py
agentic-coworker/agents/cyber-risk/threat-actor-agent/service/: inference_service.py
agentic-coworker/agents/cyber-risk/threat-actor-agent/tests/: test_inference_service.py  test_orchestrator_actor_integration.py
agentic-coworker/agents/src/agents/apis/: api_server.py  chat_apis.py  session_manager.py
agentic-coworker/agents/src/agents/base/: base_agent.py
agentic-coworker/agents/src/agents/cli/: main.py
agentic-coworker/agents/src/agents/utils/: llm.py  logger.py  oauth.py
agentic-coworker/mcp_services/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_docker.sh  push_docker.sh  pyproject.toml  run_docker.sh  setup.cfg  start.sh  start_docker.sh
agentic-coworker/mcp_services/cyber-risk/breach-stats/benchmarks/: default-benchmarks.json
agentic-coworker/mcp_services/cyber-risk/breach-stats/service/: benchmark_service.py
agentic-coworker/mcp_services/cyber-risk/breach-stats/tests/: test_benchmark_service.py
agentic-coworker/mcp_services/mappings/: README.md  mcp_tool_spec.json
agentic-coworker/mcp_services/src/mcp_services/: main.py
agentic-coworker/mcp_services/src/mcp_services/utils/: db.py  (+5 more)
agentic-coworker/mcp_services/tests/: test_mcp.py  test_notify_endpoint.py
agentic-coworker/support_services/: .dockerignore  Dockerfile  README.md  build_docker.sh  main.py  push_docker.sh  pyproject.toml  setup.cfg  start.sh  start_docker.sh
agentic-coworker/support_services/risk_api/: app.py  engine.py
agentic-coworker/support_services/src/support_services/: api_server.py
(+391 files in other folders)
