[project]
name = "agents"
version = "0.1.0"
description = "agent factory"
authors = [
    { name = "Jingnan Zhou" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]


[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
pretty = true
# Optional: explicitly define source paths
# This is not always necessary if you're running `mypy src/`
mypy_path = "src"
files = ["src"]
